--- a/Factory_set_air/factory_set.ui
+++ b/Factory_set_air/factory_set.ui
@@ -92,7 +92,7 @@
        <string notr="true">#tabWidget{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(9, 41, 4, 255), stop:0.085 rgba(2, 79, 0, 255), stop:0.19 rgba(50, 147, 22, 255), stop:0.275 rgba(236, 191, 49, 255), stop:0.39 rgba(243, 61, 34, 255), stop:0.555 rgba(135, 81, 60, 255), stop:0.667 rgba(121, 75, 255, 255), stop:0.825 rgba(164, 255, 244, 255), stop:0.885 rgba(104, 222, 71, 255), stop:1 rgba(93, 128, 0, 255));}</string>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="base_set">
        <attribute name="title">
@@ -917,7 +917,7 @@
                 <item>
                  <widget class="QCheckBox" name="checkBox_WT_AUTO_TEST_WHEN_DUT_READY">
                   <property name="text">
-                   <string>是否设置自动测试</string>
+                   <string>自动测试</string>
                   </property>
                  </widget>
                 </item>
@@ -928,7 +928,7 @@
                 <item>
                  <widget class="QCheckBox" name="checkBox_WT_IS_NEED_LINKMES">
                   <property name="text">
-                   <string>是否连接MES</string>
+                   <string>连接MES</string>
                   </property>
                  </widget>
                 </item>
