增加自动检测文件损坏功能，修复线损工具重复运行bug

--- a/Factory_set_air/image.qrc
+++ b/Factory_set_air/image.qrc
@@ -8,5 +8,6 @@
         <file>image/login.png</file>
         <file>image/set.png</file>
         <file>image/CVTE.jpg</file>
+        <file>image/404.jpg</file>
     </qresource>
 </RCC>
